5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1771_1580.log
== SUBMITION (2019-05-30 11:26:51) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(botas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+nnotas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
		a=a+1				  
					  

-- EXECUTION TIME:
0.580866
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:01) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(botas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+nnotas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
		a=a+1				  
					  

-- ERROR:
File "XXXX", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:27:01) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(botas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+nnotas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
		a=a+1				  
					  

-- EXECUTION TIME:
0.539545
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:27:22) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(botas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+nnotas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
		a=a+1				  
					  

-- EXECUTION TIME:
0.370391
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:27:44) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
		a=a+1				  
					  

-- EXECUTION TIME:
0.503721
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:27:50) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
0.656459
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:27:53) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
0.786928
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:27:53) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
0.850628
-- ERROR:
  File "/home/codebench/codes/1771/1580/main.py", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:15) 
-- CODE:
notas=array(eval(f(input("digite um vetor: "))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- ERROR:
File "XXXX", line 2
    nome=array(eval(input()))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:28:58) 
-- CODE:
notas=array(eval(input("digite um vetor: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
0.429349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1580/main.py", line 1, in <module>
    notas=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:06) 
-- CODE:
notas=array(eval(input("digite um vetor: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:38) 
-- CODE:
notas=array(eval(input("digite a nota: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:23) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:30:23) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
2.18286
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
3
4
5
5.0
A
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:30:29) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
2.54885
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
digite as notas: digite um numero: 6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
digite as notas: digite um numero: 0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:31:57) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
1.75142
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
digite as notas: digite um numero: 3
4
5
5.0
A
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
6
0
5
3.4
JULIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:00) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
2.94049
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
3
4
5
5.0
A
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
6
0
5
3.4
JULIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:00) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
3.36555
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
6
0
5
3.4
JULIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:04) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
5.10508
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:04) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
6.56678
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
3
4
5
5.0
A
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:04) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
8.94516
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:04) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
8.06572
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:05) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
6.32288
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:06) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
6.94834
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:06) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
7.31185
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
3
4
5
5.0
A
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:07) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
8.8014
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:07) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
7.48221
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:07) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
5.46541
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:07) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
8.77157
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
digite as notas: digite um numero: 0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:10) 
-- CODE:
from numpy import*
notas=array(eval(input("digite as notas: ")))
nome=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nome[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
5.93319
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
0
7
4
6.39
HELOISA
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
digite as notas: digite um numero: 0
7
4
6.39
HELOISA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
digite as notas: digite um numero: 0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:27) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
nomes=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
2.10967
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
3
4
5
5.0
A
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:32) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
nomes=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
1.87341
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:33) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
nomes=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
2.29412
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:33) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
nomes=array(eval(input("digite um numero: ")))
i=0
f=0
a=0
r=0
s=0
soma=0
pe=0
n=0					  
while(i<size(notas)):
	if(notas[i]==-1):
		f=f+1
	if(notas[i]>=6):
		a=a+1
	if(notas[i]<6 and notas[i]!=-1):
		r=r+1
	if(notas[i]!=-1):
		s=s+notas[i]
		pe=pe+1			  
	if(notas[i]==max(notas)):
		n=nomes[i]
	i=i+1
print(f)
print(a)
print(r)
print(round(s/pe,2))	
print(n)
						  
					  

-- EXECUTION TIME:
2.41037
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
